remove the step from the path

--- a/app/views/idv/usps/index.html.slim
+++ b/app/views/idv/usps/index.html.slim
@@ -16,4 +16,4 @@
 = link_to t('idv.messages.usps.bad_address'), idv_phone_path
 
 .mt2.pt1.border-top
-  = link_to t('links.cancel'), idv_cancel_step_path(step: :usps), class: 'h5'
+  = link_to t('links.cancel'), idv_cancel_path, class: 'h5'
