LG 363 LOA3 cancellation (#2341)
**Why**: We've re-designed the cancellation flow for LOA3 to make it a bit more straightforward. This means adding a new page for cancellations and removing the personal key confirmation (assuming the user will care more about when they come back later and reset their account if they don't have it).

--- a/app/assets/stylesheets/components/_list.scss
+++ b/app/assets/stylesheets/components/_list.scss
@@ -1,3 +1,22 @@
+@mixin color-list($color: $yellow) {
+  list-style: none;
+  padding: 0;
+
+  li {
+    padding-left: 1rem;
+    text-indent: -1rem;
+
+    &::before {
+      color: $color;
+      content: '•';
+      font-size: 2rem;
+      line-height: 1.5rem;
+      padding-right: .5rem;
+      vertical-align: -3px;
+    }
+  }
+}
+
 .circle-number {
   font-size: 13px;
   font-weight: bold;
@@ -23,40 +42,14 @@
   }
 }
 
+.red-dots {
+  @include color-list($red)
+}
+
 .teal-dots {
-  list-style: none;
-  padding: 0;
-
-  li {
-    padding-left: 1rem;
-    text-indent: -1rem;
-
-    &::before {
-      color: $teal;
-      content: '•';
-      font-size: 2rem;
-      line-height: 1.5rem;
-      padding-right: .5rem;
-      vertical-align: -3px;
-    }
-  }
+  @include color-list($teal)
 }
 
 .yellow-dots {
-  list-style: none;
-  padding: 0;
-
-  li {
-    padding-left: 1rem;
-    text-indent: -1rem;
-
-    &::before {
-      color: $yellow;
-      content: '•';
-      font-size: 2rem;
-      line-height: 1.5rem;
-      padding-right: .5rem;
-      vertical-align: -3px;
-    }
-  }
+  @include color-list($yellow);
 }
