--- a/app/views/idv/usps/index.html.slim
+++ b/app/views/idv/usps/index.html.slim
@@ -14,3 +14,6 @@
   class: 'btn btn-primary btn-wide', form_class: 'inline-block mr2'
 
 = link_to t('idv.messages.usps.bad_address'), idv_phone_path
+
+.mt2.pt1.border-top
+  = link_to t('links.cancel'), idv_cancel_path, class: 'h5'
