--- a/app/views/idv/review/new.html.slim
+++ b/app/views/idv/review/new.html.slim
@@ -9,3 +9,6 @@ h1.h3 = t('idv.titles.session.review')
     - phone = @idv_params[:phone]
     - formatted_phone = PhoneFormatter.format(phone)
     = render 'shared/pii_review', pii: @idv_params, phone: formatted_phone
+
+  .mt2.pt1.border-top
+    = link_to t('links.cancel'), idv_cancel_path, class: 'h5'
