LG-483 USAJOBS/ TTP create account state bug
**Why**: To provide clear agency specific instructions on account creation

**How**: Update the locale files.

--- a/app/views/shared/_sp_alert.html.slim
+++ b/app/views/shared/_sp_alert.html.slim
@@ -1,4 +1,4 @@
-- if decorated_session.sp_alert?
+- if decorated_session.sp_alert?(request.path)
   - sp_alert_name = decorated_session.sp_alert_name
   .alert.alert-notice.sm-left-align
     .bold = t("service_providers.#{sp_alert_name}.header")
