--- a/app/views/users/phone_setup/index.html.slim
+++ b/app/views/users/phone_setup/index.html.slim
@@ -17,6 +17,9 @@ p.mt-tiny.mb0 = @presenter.info
   .sm-col-8.mb3
     = f.label :phone
       strong.left = @presenter.label
+    .mb1 class='text-hint'
+      span = t('forms.example') + ' '
+      span id='ex-phone'
     = f.input :phone, as: :tel, label: false, required: true,
         input_html: { class: 'phone col-8 mb4' }
   div
