LG-475 Add Connected Applications to Account Management
**Why**:  So the user can see which applications they've used previously with login.gov and be able to find their way to these applications or manage their relationships.

**How**:  Iterate through all the service providers in the identities table for the user and display a new connected apps partial for each entry.

--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -60,6 +60,13 @@ h1.hide = t('titles.account')
 
 .mb3.profile-info-box
   .bg-lightest-blue.pb1.pt1.px2.h6.caps.clearfix
+    = t('headings.account.connected_apps')
+    = image_tag asset_url('connected_apps.png'), width: 12, class: 'ml1'
+  - @view_model.connected_apps.each do |identity|
+    = render identity.connected_app_partial, identity: identity
+
+.mb3.profile-info-box
+  .bg-lightest-blue.pb1.pt1.px2.h6.caps.clearfix
     = t('headings.account.account_history')
     = image_tag asset_url('history.svg'), width: 12, class: 'ml1'
   - @view_model.recent_events.each do |event|
