Allow exception logs to capture nil user
**Why**: For some reason, the exception notification gem returns `nil`
sometimes for `@kontroller.analytics_user`.

**How**: Use an instance of AnonymousUser when a user doesn't exist

--- a/app/views/exception_notifier/_session.text.erb
+++ b/app/views/exception_notifier/_session.text.erb
@@ -16,7 +16,7 @@ Referer: <%= @request.referer %>
 <% session['user_return_to'] = session['user_return_to']&.split('?')&.first %>
 Session: <%= session %>
 
-<% user = @kontroller.analytics_user %>
+<% user = @kontroller.analytics_user || AnonymousUser.new %>
 User UUID: <%= user.uuid %>
 User's Country (based on phone): <%= Phonelib.parse(user.phone).country %>
 
