LG-460: Added new banners for when we are not in production and no_pii_mode is activated.  The application should now have a more prominent indication that it is in test/demo mode.

--- a/app/views/layouts/base.html.slim
+++ b/app/views/layouts/base.html.slim
@@ -52,7 +52,8 @@ html lang="#{I18n.locale}" class='no-js'
     .site-wrap
       = render 'shared/i18n_mode' if FeatureManagement.enable_i18n_mode?
       = render 'shared/no_pii_banner' if FeatureManagement.no_pii_mode?
-      = render 'shared/usa_banner'
+      = render 'shared/fake_banner' if FeatureManagement.no_pii_mode?
+      = render 'shared/usa_banner' if !(FeatureManagement.no_pii_mode?)
       - if content_for?(:nav)
         = yield(:nav)
       - else
