--- a/app/views/layouts/base.html.slim
+++ b/app/views/layouts/base.html.slim
@@ -51,8 +51,10 @@ html lang="#{I18n.locale}" class='no-js'
   body class="#{Rails.env}-env site #{yield(:background_cls)}"
     .site-wrap
       = render 'shared/i18n_mode' if FeatureManagement.enable_i18n_mode?
-      = render 'shared/no_pii_banner' if FeatureManagement.no_pii_mode?
-      = render 'shared/usa_banner'
+      - if FeatureManagement.fake_banner_mode?
+        = render 'shared/fake_banner'
+      - else
+        = render 'shared/usa_banner'
       - if content_for?(:nav)
         = yield(:nav)
       - else
