--- a/app/assets/stylesheets/components/_profile-section.scss
+++ b/app/assets/stylesheets/components/_profile-section.scss
@@ -3,6 +3,7 @@
   border-bottom: $border-width solid $border-color;
   border-radius: 0;
   margin-bottom: 0;
+  overflow: hidden;
 
   .bg-lightest-blue img {
     margin-top: -2px;
