[LG-500] Read phone configuration from table
**Why**:
We want to transition to the phone_configurations table so
that we can support multiple phones per user. For this PR,
we read phone information from the new table without changing
how we write data.

**How**:
We change everywhere that we read phone info from the user model
to read it from the table.

--- a/app/views/exception_notifier/_session.text.erb
+++ b/app/views/exception_notifier/_session.text.erb
@@ -18,6 +18,6 @@ Session: <%= session %>
 
 <% user = @kontroller.analytics_user || AnonymousUser.new %>
 User UUID: <%= user.uuid %>
-User's Country (based on phone): <%= Phonelib.parse(user.phone).country %>
+User's Country (based on phone): <%= Phonelib.parse(user.phone_configuration.phone).country %>
 
 Visitor ID: <%= @request.cookies['ahoy_visitor'] %>
