--- a/app/views/idv/otp_delivery_method/new.html.slim
+++ b/app/views/idv/otp_delivery_method/new.html.slim
@@ -1,8 +1,8 @@
 h1.h3.my0 = t('idv.titles.otp_delivery_method')
 p.mt1 = t('idv.messages.otp_delivery_method.phone_number_html',
-      phone: @set_otp_delivery_method_presenter.phone)
-= simple_form_for(@otp_delivery_selection_form, url: idv_otp_delivery_method_url,
-  html: { autocomplete: 'off', method: 'put', role: 'form', class: 'mt3' }) do |f|
+      phone: @idv_phone)
+= form_tag(idv_otp_delivery_method_url , method: 'put', autocomplete: 'off',
+    role: 'form', class: 'mt3') do |f|
     fieldset.mb3.p0.border-none
       label.btn-border.col-12.mb1
         .radio
@@ -13,30 +13,16 @@ p.mt1 = t('idv.messages.otp_delivery_method.phone_number_html',
             = t('devise.two_factor_authentication.otp_delivery_preference.sms')
           .regular.gray-dark.fs-10p.mb-tiny
             = t('devise.two_factor_authentication.two_factor_choice_options.sms_info')
-      - if @set_otp_delivery_method_presenter.sms_only?
-        label.btn-border.col-12.mb0.btn-disabled
-          .radio
-            = radio_button_tag 'otp_delivery_selection_form[otp_delivery_preference]',
-              :voice, false,
-              disabled: true,
-              class: :otp_delivery_preference_voice
-            span.indicator.mt-tiny
-            span.blue.bold.fs-20p
-              = t('devise.two_factor_authentication.otp_delivery_preference.voice')
-            .regular.gray-dark.fs-10p.mb-tiny
-              = t('devise.two_factor_authentication.two_factor_choice_options.voice_info')
-                p.mt2.mb0 = @set_otp_delivery_method_presenter.phone_unsupported_message
-      - else
-        label.btn-border.col-12.mb0
-          .radio
-            = radio_button_tag 'otp_delivery_selection_form[otp_delivery_preference]',
-              :voice, false,
-              class: :otp_delivery_preference_voice
-            span.indicator.mt-tiny
-            span.blue.bold.fs-20p
-              = t('devise.two_factor_authentication.otp_delivery_preference.voice')
-            .regular.gray-dark.fs-10p.mb-tiny
-              = t('devise.two_factor_authentication.two_factor_choice_options.voice_info')
+      label.btn-border.col-12.mb0
+        .radio
+          = radio_button_tag 'otp_delivery_selection_form[otp_delivery_preference]',
+            :voice, false,
+            class: :otp_delivery_preference_voice
+          span.indicator.mt-tiny
+          span.blue.bold.fs-20p
+            = t('devise.two_factor_authentication.otp_delivery_preference.voice')
+          .regular.gray-dark.fs-10p.mb-tiny
+            = t('devise.two_factor_authentication.two_factor_choice_options.voice_info')
       - if FeatureManagement.enable_usps_verification?
         .mt3
           = t('idv.form.no_alternate_phone_html',
@@ -45,8 +31,7 @@ p.mt1 = t('idv.messages.otp_delivery_method.phone_number_html',
         = t('instructions.mfa.wrong_number_html',
         link: link_to(t('forms.two_factor.try_again'), idv_phone_path))
     .mt3
-      = f.submit t('idv.buttons.send_confirmation_code'),
-        type: :submit,
+      = submit_tag t('idv.buttons.send_confirmation_code'),
         class: 'sm-col-6 col-12 btn btn-primary'
 .mt3.border-top
   .mt1
