--- a/app/views/account_reset/confirm_request/show.html.slim
+++ b/app/views/account_reset/confirm_request/show.html.slim
@@ -6,3 +6,8 @@
   h1.mt1.mb-12p.h3 = t('headings.verify_email')
   p
     == t('account_reset.confirm_request.instructions', email: email)
+  - if sms_phone
+    p
+      == t('account_reset.confirm_request.security_note')
+  p
+    == t('account_reset.confirm_request.close_window')
