Refactor AccountReset::DeleteAccountController
**Why**: To make it more consistent with other controllers and ensure
all desired analytics are properly captured.

**How**:
- Use service objects to validate the granted token, capture analytics,
and process the account deletion
- Fix the link to create a new account to point to the email sign up
page instead of the home page
- Remove unnecessary token param from `delete_account/show` view
- Move localizations out of Devise and into the `errors` file
- Update controller specs to test all analytics and before_action
- Update feature spec to test that the deletion confirmation email is
sent

--- a/app/views/account_reset/delete_account/show.html.slim
+++ b/app/views/account_reset/delete_account/show.html.slim
@@ -7,7 +7,7 @@ br
 h4.my2 = t('account_reset.delete_account.are_you_sure')
 
 = button_to t('account_reset.delete_account.delete_button'), \
-    account_reset_delete_account_path(token: session[:granted_token]), method: :delete, \
+    account_reset_delete_account_path, method: :delete, \
     class: 'btn btn-red col-6 p2 rounded-lg border bw2 bg-lightest-red border-red border-box'
 br
 br
