--- a/app/views/account_reset/confirm_delete_account/show.html.slim
+++ b/app/views/account_reset/confirm_delete_account/show.html.slim
@@ -5,4 +5,5 @@
     class: 'absolute top-n24 left-0 right-0 mx-auto')
   h3 = t('account_reset.confirm_delete_account.title')
   p == t('account_reset.confirm_delete_account.info', \
-    email: email, link: link_to(t('account_reset.confirm_delete_account.link_text'), root_path))
+    email: email, \
+    link: link_to(t('account_reset.confirm_delete_account.link_text'), sign_up_email_path))
