LG-557 Update LOA3 'failure to proof' screens
**Why**: To provide a path forward for the user to complete their action in the event remote proofing failed

**How**: Implement the new design in the failure partials and create a new partial specifically for returning to the failure_to_proof_url supplied by the SP.

--- a/app/views/shared/_failure.html.slim
+++ b/app/views/shared/_failure.html.slim
@@ -12,6 +12,7 @@ p == presenter.description
 
 - if presenter.message.present?
   h2.h4.mb2.mt3.my0 = presenter.message
+  = render 'idv/shared/failure_to_proof_url', presenter: presenter
 
 - presenter.next_steps.each do |step|
   p == step
