LG-625 Cancel flow modification
**Why**: The current cancel flow takes the user back to the user's account. It will be more useful for them to go back to the SP.

**How**: Replace the link to the accounts page with the failure_to_proof_url which will use the return_to_sp link if a failure to proof url is not provided.  Thus, it will satisfy requirements for both LOA1 and LOA3.

--- a/app/views/idv/cancellations/destroy.html.slim
+++ b/app/views/idv/cancellations/destroy.html.slim
@@ -4,4 +4,5 @@ ul class="list-reset #{@presenter.state_color}-dots"
   - @presenter.cancellation_effects.each do |effect|
     li = effect
 
-.mt2 = link_to t('idv.cancel.return_to_account'), account_path
+.mt2 = link_to "‹ #{t('links.back_to_sp', sp: decorated_session.sp_name)}",
+  decorated_session.failure_to_proof_url
