--- a/app/views/idv/shared/verification_failure.html.slim
+++ b/app/views/idv/shared/verification_failure.html.slim
@@ -1,7 +1,7 @@
 = render 'shared/failure', presenter: presenter
 p == presenter.warning_message
 
-= render 'idv/shared/failure_to_proof_url', presenter: presenter
+= render 'shared/failure_url', presenter: presenter
 
 .mt3
   = link_to presenter.button_text, presenter.button_path, class: 'btn btn-primary btn-link'
