--- a/app/views/exception_notifier/_session.text.erb
+++ b/app/views/exception_notifier/_session.text.erb
@@ -18,6 +18,8 @@ Session: <%= session %>
 
 <% user = @kontroller.analytics_user || AnonymousUser.new %>
 User UUID: <%= user.uuid %>
-User's Country (based on phone): <%= Phonelib.parse(user.phone_configuration.phone).country %>
+<% if user.phone_configuration %>
+  User's Country (based on phone): <%= Phonelib.parse(user.phone_configuration.phone).country %>
+<% end %>
 
 Visitor ID: <%= @request.cookies['ahoy_visitor'] %>
