--- a/app/views/users/two_factor_authentication_setup/index.html.slim
+++ b/app/views/users/two_factor_authentication_setup/index.html.slim
@@ -9,18 +9,18 @@ p.mt-tiny.mb3 = @presenter.info
       url: two_factor_options_path) do |f|
   .mb3
     fieldset.m0.p0.border-none.
-      legend.mb1.h4.serif.bold = @presenter.label
+      legend.mb2.serif.bold = @presenter.label
       - @presenter.options.each do |option|
-        label.btn-border.col-12.mb1 for="two_factor_options_form_selection_#{option.type}"
+        label.btn-border.col-12.mb2 for="two_factor_options_form_selection_#{option.type}"
           .radio
             = radio_button_tag('two_factor_options_form[selection]',
               option.type,
               @two_factor_options_form.selected?(option.type))
             span.indicator.mt-tiny
             span.blue.bold.fs-20p = option.label
-            .regular.gray-dark.fs-10p.mb-tiny = option.info
+            .regular.gray-dark.fs-10p.mt0.mb-tiny = option.info
 
   div
-    = f.button :submit, t('forms.buttons.continue'), class: 'sm-col-6 col-12 btn-wide mb3'
+    = f.button :submit, t('forms.buttons.continue'), class: 'sm-col-6 col-12 btn-wide mb1'
 
 = render 'shared/cancel', link: destroy_user_session_path
