[LG-574] make phone_configuration plural
**Why**: We want to support multiple phone numbers. This is
an intermediate step in that direction.

**How**: We go through and look for all the places we call
phone_configuration. We pluralize and try to see if we're
asking a question about the collection or a particular one.

--- a/app/views/exception_notifier/_session.text.erb
+++ b/app/views/exception_notifier/_session.text.erb
@@ -18,8 +18,8 @@ Session: <%= session %>
 
 <% user = @kontroller.analytics_user || AnonymousUser.new %>
 User UUID: <%= user.uuid %>
-<% if user.phone_configuration %>
-  User's Country (based on phone): <%= Phonelib.parse(user.phone_configuration.phone).country %>
+<% if user.phone_configurations.any? %>
+  User's Country (based on first phone): <%= Phonelib.parse(user.phone_configurations.first.phone).country %>
 <% end %>
 
 Visitor ID: <%= @request.cookies['ahoy_visitor'] %>
