LG-601 Allow a user to add a new webauthn configuration
**Why**: So we can support strong authentication via hardware security keys as a new 2FA option

**How**: Generate a challenge on the server side.   Use the Credential Manager API (navigator.credentials.create) to ask the browser to generate a new credential.  After obtaining user consent, get the public_key and signed attestation and forward it to the server along with a name supplied by the user.  Use the webauthn gem to verify the credentials.  Upon success, store the credential id, public_key, and name in the db as a new webauthn_configuration.

--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -45,6 +45,12 @@ h1.hide = t('titles.account')
     content: content_tag(:em, @view_model.totp_content),
     action: @view_model.totp_partial
 
+  - if FeatureManagement.webauthn_enabled?
+    = render 'account_item',
+      name: t('account.index.webauthn'),
+      content: content_tag(:em, @view_model.totp_content),
+      action: @view_model.webauthn_partial
+
   - if current_user.piv_cac_available?
     = render 'account_item',
       name: t('account.index.piv_cac_card'),
