--- a/app/views/devise/shared/_password_strength.html.slim
+++ b/app/views/devise/shared/_password_strength.html.slim
@@ -8,5 +8,5 @@
     .h5
       span.h6 = t('instructions.password.strength.intro')
       span#pw-strength-txt.bold*{ 'data-forbidden-passwords' => @forbidden_passwords } = '...'
-    .h6
+    .h6.block
       #pw-strength-feedback.italic
