LG-598 LG-600 List/delete webauthn configurations for a user
**Why**: So we can support strong authentication via hardware security keys as a new 2FA option

**How**: Update the accounts page to list a user's webauthn configurations. Add new styling.

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -75,3 +75,19 @@
   border-color: $gray;
   color: $gray;
 }
+
+.btn-account-action {
+  border: 0;
+  color: $blue;
+  font-size: .8125rem;
+  font-weight: normal;
+  margin-bottom: -3px;
+  margin-top: -3px;
+  padding: .5rem;
+  padding-bottom: .125rem;
+  padding-top: .125rem;
+
+  a {
+    text-decoration: none;
+  }
+}
