--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -46,10 +46,7 @@ h1.hide = t('titles.account')
     action: @view_model.totp_partial
 
   - if FeatureManagement.webauthn_enabled?
-    = render 'account_item',
-      name: t('account.index.webauthn'),
-      content: content_tag(:em, @view_model.totp_content),
-      action: @view_model.webauthn_partial
+    = render 'webauthn'
 
   - if current_user.piv_cac_available?
     = render 'account_item',
