--- a/app/views/accounts/_webauthn.html.slim
+++ b/app/views/accounts/_webauthn.html.slim
@@ -13,3 +13,4 @@
     .col.col-4.sm-6.right-align
       = button_to(t('account.index.webauthn_delete'), webauthn_setup_path(id: cfg.id),
         method: :delete, class: 'btn btn-link')
+.clearfix.border-bottom.border-blue-light
