--- a/app/views/idv/cancellations/destroy.html.slim
+++ b/app/views/idv/cancellations/destroy.html.slim
@@ -4,5 +4,6 @@ ul class="list-reset #{@presenter.state_color}-dots"
   - @presenter.cancellation_effects.each do |effect|
     li = effect
 
-.mt2 = link_to "‹ #{t('links.back_to_sp', sp: decorated_session.sp_name)}",
-  decorated_session.failure_to_proof_url
+- if decorated_session.sp_name
+  .mt2 = link_to "‹ #{t('links.back_to_sp', sp: decorated_session.sp_name)}",
+    decorated_session.failure_to_proof_url
