LG-609 Change language on phone / address confirmation page
**Why**: Users are confused / frustrated why we’re asking for the phone number again

**How**: Change language on the page to make it feel like users are verifying their identity rather than repeating an action.

--- a/app/views/idv/phone/new.html.slim
+++ b/app/views/idv/phone/new.html.slim
@@ -2,6 +2,8 @@
 
 h1.h3.my0 = t('idv.titles.session.phone')
 
+.py1.m0 = t('idv.messages.phone.description')
+
 .mt2
   == t('idv.messages.phone.alert')
 
