--- a/app/views/idv/otp_delivery_method/new.html.slim
+++ b/app/views/idv/otp_delivery_method/new.html.slim
@@ -6,7 +6,8 @@ p.mt1 = t('idv.messages.otp_delivery_method.phone_number_html',
     fieldset.mb3.p0.border-none
       label.btn-border.col-12.mb1
         .radio
-          = radio_button_tag 'otp_delivery_selection_form[otp_delivery_preference]', :sms, true,
+          = radio_button_tag 'otp_delivery_selection_form[otp_delivery_preference]',
+            :sms, false,
             class: :otp_delivery_preference_sms
           span.indicator.mt-tiny
           span.blue.bold.fs-20p
