--- a/app/views/idv/cancellations/destroy.html.slim
+++ b/app/views/idv/cancellations/destroy.html.slim
@@ -5,7 +5,7 @@ ul class="list-reset #{@presenter.state_color}-dots"
     li = effect
 
 - if decorated_session.sp_name
-  .mt2 = link_to "‹ #{t('links.back_to_sp', sp: '')}",
+  .mt2 = link_to "‹ #{t('links.back_to_sp', sp: decorated_session.sp_name)}",
     decorated_session.failure_to_proof_url
 - else
   .mt2 = link_to "‹ #{t('links.back_to_sp', sp: t('links.my_account'))}", account_url
