LG-515 Move 2FA localizations out of Devise file
**Why**: The Devise locale folder is for Devise-specific strings. None
of the strings we had under the `two_factor_authentication` section
were related to Devise. We have a separate folder for 2FA localizations:
`config/locales/two_factor_authentication`

**How**:
- Cut and paste anything under `devise.two_factor_authentication`
into the `two_factor_authentication` folder
- Run `make normalize_yaml`
- Do a search and replace for `devise.two_factor_authentication` with
`two_factor_authentication`

--- a/app/assets/javascripts/i18n-strings.js.erb
+++ b/app/assets/javascripts/i18n-strings.js.erb
@@ -1,8 +1,8 @@
 window.LoginGov = window.LoginGov || {};
 
 <% keys = [
-  'devise.two_factor_authentication.otp_delivery_preference.instruction',
-  'devise.two_factor_authentication.otp_delivery_preference.phone_unsupported',
+  'two_factor_authentication.otp_delivery_preference.instruction',
+  'two_factor_authentication.otp_delivery_preference.phone_unsupported',
   'errors.messages.format_mismatch',
   'errors.messages.missing_field',
   'forms.passwords.show',
