--- a/app/views/two_factor_authentication/webauthn_verification/show.html.slim
+++ b/app/views/two_factor_authentication/webauthn_verification/show.html.slim
@@ -1,6 +1,6 @@
 - title t('titles.present_webauthn')
 
-h1.h3.my0 = t('devise.two_factor_authentication.webauthn_header_text')
+h1.h3.my0 = t('two_factor_authentication.webauthn_header_text')
 .no-spinner
   p.mt-tiny.mb3 = t('instructions.mfa.webauthn.confirm_webauthn_html')
 
