--- a/app/views/idv/otp_verification/show.html.slim
+++ b/app/views/idv/otp_verification/show.html.slim
@@ -1,6 +1,6 @@
 - title t('titles.enter_2fa_code')
 
-h1.h3.my0 = t('devise.two_factor_authentication.header_text')
+h1.h3.my0 = t('two_factor_authentication.header_text')
 
 p == @presenter.phone_number_message
 
