--- a/app/views/two_factor_authentication/personal_key_verification/show.html.slim
+++ b/app/views/two_factor_authentication/personal_key_verification/show.html.slim
@@ -1,7 +1,7 @@
 - title t('titles.enter_2fa_code')
 
-h1.h3.my0 = t('devise.two_factor_authentication.personal_key_header_text')
-p.mt-tiny.mb0 = t('devise.two_factor_authentication.personal_key_prompt')
+h1.h3.my0 = t('two_factor_authentication.personal_key_header_text')
+p.mt-tiny.mb0 = t('two_factor_authentication.personal_key_prompt')
 
 = simple_form_for(@personal_key_form, url: login_two_factor_personal_key_path,
   html: { autocomplete: 'off', method: :post, role: 'form' }) do |f|
