--- a/app/views/users/shared/_otp_delivery_preference_selection.html.slim
+++ b/app/views/users/shared/_otp_delivery_preference_selection.html.slim
@@ -1,19 +1,19 @@
 .mb3
   fieldset.m0.p0.border-none
-    legend.mb1.h4.serif.bold = t('devise.two_factor_authentication.otp_delivery_preference.title')
+    legend.mb1.h4.serif.bold = t('two_factor_authentication.otp_delivery_preference.title')
     p#otp_delivery_preference_instruction.mt0.mb2
-      = t('devise.two_factor_authentication.otp_delivery_preference.instruction')
+      = t('two_factor_authentication.otp_delivery_preference.instruction')
     label.btn-border.col-12.sm-col-5.sm-mr2.mb2.sm-mb0
       .radio
         = radio_button_tag 'user_phone_form[otp_delivery_preference]', :sms, true,
           class: :otp_delivery_preference_sms
         span.indicator
-        = t('devise.two_factor_authentication.otp_delivery_preference.sms')
+        = t('two_factor_authentication.otp_delivery_preference.sms')
     label.btn-border.col-12.sm-col-5.mb0
       .radio
         = radio_button_tag 'user_phone_form[otp_delivery_preference]', :voice, false,
           class: :otp_delivery_preference_voice
         span.indicator
-        = t('devise.two_factor_authentication.otp_delivery_preference.voice')
+        = t('two_factor_authentication.otp_delivery_preference.voice')
     p.mb0.mt1
       = link_to t('links.two_factor_authentication.app_option'), authenticator_setup_path
