add space to empty div template so it appears

--- a/app/views/devise/shared/_password_strength.html.slim
+++ b/app/views/devise/shared/_password_strength.html.slim
@@ -9,4 +9,4 @@
       span.h6 = t('instructions.password.strength.intro')
       span#pw-strength-txt.bold*{ 'data-forbidden-passwords' => @forbidden_passwords } = '...'
     .h6
-      #pw-strength-feedback.italic
+      #pw-strength-feedback.italic &nbsp;
