LG-627 Don't automatically select SMS during IdV (#2511)
**Why**: When a user uses a different number for address verification
than the one they used for 2FA they are asked to choose if they'd like
to get the code sent to them via text message or voice message. Text
message is auto-selected but it should default to no selection so users
don't think text message is the only option or that it's automatically
compatible with their phone.

--- a/app/views/idv/otp_delivery_method/new.html.slim
+++ b/app/views/idv/otp_delivery_method/new.html.slim
@@ -6,7 +6,8 @@ p.mt1 = t('idv.messages.otp_delivery_method.phone_number_html',
     fieldset.mb3.p0.border-none
       label.btn-border.col-12.mb1
         .radio
-          = radio_button_tag 'otp_delivery_selection_form[otp_delivery_preference]', :sms, true,
+          = radio_button_tag 'otp_delivery_preference',
+            :sms, false,
             class: :otp_delivery_preference_sms
           span.indicator.mt-tiny
           span.blue.bold.fs-20p
@@ -15,7 +16,7 @@ p.mt1 = t('idv.messages.otp_delivery_method.phone_number_html',
             = t('two_factor_authentication.two_factor_choice_options.sms_info')
       label.btn-border.col-12.mb0
         .radio
-          = radio_button_tag 'otp_delivery_selection_form[otp_delivery_preference]',
+          = radio_button_tag 'otp_delivery_preference',
             :voice, false,
             class: :otp_delivery_preference_voice
           span.indicator.mt-tiny
