LG-637 Set max length of state id number to 25
**Why**: Because according to AAMVA this is the longest a state id
number can be, and they perform this validation on the requests that we
send to them.

--- a/app/assets/javascripts/i18n-strings.js.erb
+++ b/app/assets/javascripts/i18n-strings.js.erb
@@ -9,6 +9,7 @@ window.LoginGov = window.LoginGov || {};
   'idv.errors.pattern_mismatch.dob',
   'idv.errors.pattern_mismatch.personal_key',
   'idv.errors.pattern_mismatch.ssn',
+  'idv.errors.pattern_mismatch.state_id_number',
   'idv.errors.pattern_mismatch.zipcode',
   'idv.failure.button.warning',
   'instructions.password.strength.i',
