Update capybara-screenshot to point to rubygems
**Why**: To have the most stable version. I was working on another PR
and I started having bundler issues due to capybara-screenshot.

Note that by updating capybara-screenshot, capybara was also updated
to 3.7.2, which is good because we were quite behind at 2.17.0.
Version 3 changes the way text is matched. It no longer normalizes
whitespace and returns text as close as possible to "as rendered", which
allows us to find bugs such as extra spaces in our localizations.

Version 3 also uses puma by default, so I added the gem.

More upgrade details here:
https://github.com/teamcapybara/capybara/blob/master/UPGRADING.md

--- a/app/views/shared/_personal_key.html.slim
+++ b/app/views/shared/_personal_key.html.slim
@@ -17,7 +17,7 @@ p.mt-tiny.mb0
     class: 'ml2 btn-border ico ico-print text-decoration-none'
 
 = accordion('personal-key-info', t('users.personal_key.help_text_header')) do
-  = simple_format(t('users.personal_key.help_text'))
+  = t('users.personal_key.help_text_html')
 
 div
   = button_to t('forms.buttons.continue'), update_path,
