--- a/app/views/users/phone_setup/index.html.slim
+++ b/app/views/users/phone_setup/index.html.slim
@@ -26,7 +26,7 @@ p.mt-tiny.mb0 = @presenter.info
         class: 'sm-col-6 col-12 btn-wide mb3 no-auto-enable'
 .mt2.pt1.border-top
   ruby:
-    path = if MfaContext.new(current_user).piv_cac_enabled?
+    path = if TwoFactorAuthentication::PivCacPolicy.new(current_user).enabled?
              account_recovery_setup_path
            else
              two_factor_options_path
