--- a/app/views/accounts/_phone.html.slim
+++ b/app/views/accounts/_phone.html.slim
@@ -5,7 +5,7 @@
     .right-align.col.col-6
       - if MfaContext.new(current_user).phone_configurations.empty?
         .btn.btn-account-action.rounded-lg.bg-light-blue
-          = link_to t('account.index.phone_add'), path: manage_phone_url
+          = link_to t('account.index.phone_add'), manage_phone_path
   - MfaContext.new(current_user).phone_configurations.each do |phone_configuration|
     .p2.col.col-12.border-top.border-blue-light
       .col.col-8.sm-6.truncate
