LG-683 Allow IdV restart on USPS confirmation
**Why**: Because if a user enters an address they can't receive mail at,
or a user moves between requesting a code and returning to the IDP, they
currently have no option to go back and change their address. The commit
allows that by allowing the user to go back and restart IdV.

**How**: This commit creates a new action for cancelling IdV. Profile
deactivation is moved from the phone step into that new action. The "I
can't receive mail at this address" link is changed to reflect that
restarting is a destructive action. After the profile is deactivated,
the user is sent to the beginning of the IdV flow.

--- a/app/views/users/verify_account/index.html.slim
+++ b/app/views/users/verify_account/index.html.slim
@@ -12,6 +12,8 @@ p.mt-tiny.mb0 = t('forms.verify_profile.instructions')
 - unless @mail_spammed
   = link_to t('idv.messages.usps.resend'), idv_usps_path,
     class: 'block mb2'
-= link_to t('idv.messages.usps.bad_address'), idv_phone_path
+= button_to t('idv.messages.reset_and_restart_verification'), account_verify_path, method: :delete,
+  class: 'btn btn-link'
+
 .mt2.pt1.border-top
   = link_to t('idv.buttons.cancel'), account_path
