LG-695 Enable Webauthn when there is no SP
**Why**: To allow us to test in production without enabling the feature for all users.

**How**: Update the policy object to include the current SP and enable webauthn when the SP is nil.

--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -43,7 +43,7 @@ h1.hide = t('titles.account')
       content: content_tag(:em, @view_model.totp_content),
       action: @view_model.totp_partial
 
-  - if TwoFactorAuthentication::WebauthnPolicy.new(current_user).visible?
+  - if TwoFactorAuthentication::WebauthnPolicy.new(current_user, @view_model.sp).visible?
     = render 'webauthn'
 
   - if TwoFactorAuthentication::PivCacPolicy.new(current_user).visible?
