--- a/app/views/accounts/_phone.html.slim
+++ b/app/views/accounts/_phone.html.slim
@@ -7,7 +7,7 @@
         .btn.btn-account-action.rounded-lg.bg-light-blue
           = link_to t('account.index.phone_add'), manage_phone_path
   - MfaContext.new(current_user).phone_configurations.each do |phone_configuration|
-    .p2.col.col-12.border-top.border-blue-light
+    .p2.col.col-12.border-top.border-blue-light.account-list-item
       .col.col-8.sm-6.truncate
         = phone_configuration.phone
       .col.col-4.sm-6.right-align
