--- a/app/views/accounts/_webauthn.html.slim
+++ b/app/views/accounts/_webauthn.html.slim
@@ -6,7 +6,7 @@
       .btn.btn-account-action.rounded-lg.bg-light-blue
         = link_to t('account.index.webauthn_add'), webauthn_setup_url
 - MfaContext.new(current_user).webauthn_configurations.each do |cfg|
-  .p2.col.col-12.border-top.border-blue-light
+  .p2.col.col-12.border-top.border-blue-light.account-list-item
     .col.col-8.sm-6.truncate
       = cfg.name
     .col.col-4.sm-6.right-align
