adjust spacing and alignment of elements on pkey page

--- a/app/assets/stylesheets/components/_personal-key.scss
+++ b/app/assets/stylesheets/components/_personal-key.scss
@@ -46,7 +46,7 @@
 .bg-personal-key {
   background-color: $blue-lightest;
   background-image: image-url('personal-key/shield.svg');
-  background-position: center;
+  background-position: center 4rem;
   background-repeat: no-repeat;
   background-size: 244px 136px;
   border-bottom: 1px solid $border-color;
@@ -55,6 +55,15 @@
 .full-width-box {
   background-color: $blue-lightest;
   border-top: 1px solid $border-color;
-  margin-left: -80px;
-  width: 135%;
+  margin-left: -1rem;
+  width: 110%;
+}
+
+@media #{$breakpoint-sm} {
+  .full-width-box {
+    background-color: $blue-lightest;
+    border-top: 1px solid $border-color;
+    margin-left: -5rem;
+    width: 135%;
+  }
 }
