--- a/app/views/shared/_personal_key.html.slim
+++ b/app/views/shared/_personal_key.html.slim
@@ -7,17 +7,15 @@ p.mt-tiny.mb4
 .full-width-box
   = render 'partials/personal_key/key', code: code
 
-p.mt3
-  .sm-col.sm-col-6
-    .pr2.left-align.pl2
+.pkey-info.mt4.mb2
+  .sm-col.sm-col-6.sm-pr1.mb1
+    .pkey-info-image.mb1
       = image_tag(asset_url('personal-key/warning.svg'), size: '60')
-      br
-      = t('instructions.personal_key.once_html')
-  .sm-col.sm-col-6
-    .pl2
+    p = t('instructions.personal_key.once_html')
+  .sm-col.sm-col-6.sm-pl1.mb1
+    .pkey-info-image.mb1
       = image_tag(asset_url('personal-key/lock-check.svg'), size: '60')
-      br
-      = t('instructions.personal_key.safety_html')
+    p = t('instructions.personal_key.safety_html')
 
 .clearfix
 br
