--- a/app/views/partials/personal_key/_key.slim
+++ b/app/views/partials/personal_key/_key.slim
@@ -1,11 +1,11 @@
 .bg-light-blue.bg-personal-key
-  p.bold.center.mt1.pt1.pb1.fs-20p
+  p.bold.center.mt1.pt1.fs-20p
     = t('users.personal_key.header')
   .mt4.mb4.px0.sm-px1.py2.center.bg-white.bw2.separator-text.bg-pk-box
     - code.split('-').each do |word|
       .inline.fs-20p.bold.navy.monospace(data-personal-key='word')
         = word
 
-  .center.h5.mt5.pb2.fs-13p
+  .center.h5.mt6.pb2.fs-13p
     = t('users.personal_key.generated_on_html',
         date: content_tag(:strong, I18n.l(Time.zone.today, format: '%B %d, %Y')))
