--- a/app/views/partials/personal_key/_key.slim
+++ b/app/views/partials/personal_key/_key.slim
@@ -6,6 +6,6 @@
       .inline.fs-20p.bold.navy.monospace(data-personal-key='word')
         = word
 
-  .center.h5.mt6.pb2.fs-13p
+  .center.h5.mt5.mb1.pt1.pb2.fs-12p
     = t('users.personal_key.generated_on_html',
         date: content_tag(:strong, I18n.l(Time.zone.today, format: '%B %d, %Y')))
