--- a/app/assets/stylesheets/components/_util.scss
+++ b/app/assets/stylesheets/components/_util.scss
@@ -51,3 +51,16 @@
   .sm-left-align { text-align: left; }
   .sm-right-align { text-align: right; }
 }
+
+.recommended {
+  color: $olive-dark;
+  float: right;
+  font-weight: bold;
+  text-align: right;
+}
+
+.half-center {
+  margin: 0 auto;
+  text-align: center;
+  width: 300px;
+}
