--- a/app/views/accounts/_webauthn.html.slim
+++ b/app/views/accounts/_webauthn.html.slim
@@ -4,7 +4,7 @@
       = t('account.index.webauthn')
     .right-align.col.col-6
       .btn.btn-account-action.rounded-lg.bg-light-blue
-        = link_to t('account.index.webauthn_add'), webauthn_setup_url
+        = link_to t('account.index.webauthn_add'), webauthn_setup_path
 - MfaContext.new(current_user).webauthn_configurations.each do |cfg|
   .p2.col.col-12.border-top.border-blue-light.account-list-item
     .col.col-8.sm-6.truncate
