--- a/app/views/two_factor_authentication/webauthn_verification/show.html.slim
+++ b/app/views/two_factor_authentication/webauthn_verification/show.html.slim
@@ -4,34 +4,26 @@ h1.h3.my0 = t('two_factor_authentication.webauthn_header_text')
 .no-spinner
   p.mt-tiny.mb3 = t('instructions.mfa.webauthn.confirm_webauthn_html')
 
-ul.list-reset
-  li.py2.border-top
-    .mr1.inline-block.circle.circle-number.bg-blue.white
-      | 1
-    .inline.bold = t('forms.webauthn_setup.step_1')
-  li.py2.border-top
-    .mb2
-      .mr1.inline-block.circle.circle-number.bg-blue.white
-        | 2
-      .inline.bold = t('forms.webauthn_setup.step_2')
-    .sm-col-9.sm-ml-28p
-      = form_tag(login_two_factor_webauthn_path, method: :patch, role: 'form', class: 'mb1',
-        id: 'webauthn_form') do
-        = hidden_field_tag :user_challenge,
-          '[' + user_session[:webauthn_challenge].split.join(',') + ']', id: 'user_challenge'
-        = hidden_field_tag :credential_ids, @presenter.credential_ids, id: 'credential_ids'
-        = hidden_field_tag :credential_id, '', id: 'credential_id'
-        = hidden_field_tag :authenticator_data, '', id: 'authenticator_data'
-        = hidden_field_tag :signature, '', id: 'signature'
-        = hidden_field_tag :client_data_json, '', id: 'client_data_json'
+= form_tag(login_two_factor_webauthn_path, method: :patch, role: 'form', class: 'mb1',
+  id: 'webauthn_form') do
+  = hidden_field_tag :user_challenge,
+    '[' + user_session[:webauthn_challenge].split.join(',') + ']', id: 'user_challenge'
+  = hidden_field_tag :credential_ids, @presenter.credential_ids, id: 'credential_ids'
+  = hidden_field_tag :credential_id, '', id: 'credential_id'
+  = hidden_field_tag :authenticator_data, '', id: 'authenticator_data'
+  = hidden_field_tag :signature, '', id: 'signature'
+  = hidden_field_tag :client_data_json, '', id: 'client_data_json'
 .spinner[id='spinner']
-  div
+  .col-12.center
     = image_tag(asset_url('spinner.gif'),
             srcset: asset_url('spinner@2x.gif'),
             height: 144,
             width: 144,
             alt: '')
+h2.h4.half-center = t('forms.webauthn_setup.instructions_title')
+p.half-center = t('forms.webauthn_setup.login_text')
 
+br
 = render 'shared/fallback_links', presenter: @presenter
 = render 'shared/cancel', link: @presenter.cancel_link
 
