--- a/app/views/users/webauthn_setup/new.html.slim
+++ b/app/views/users/webauthn_setup/new.html.slim
@@ -11,6 +11,8 @@ div
     = hidden_field_tag :user_email, current_user.email, id: 'user_email'
     = hidden_field_tag :user_challenge,
           '[' + user_session[:webauthn_challenge].split.join(',') + ']', id: 'user_challenge'
+    = hidden_field_tag :exclude_credentials, @exclude_credentials&.join(','),
+            id: 'exclude_credentials'
     = hidden_field_tag :webauthn_id, '', id: 'webauthn_id'
     = hidden_field_tag :webauthn_public_key, '', id: 'webauthn_public_key'
     = hidden_field_tag :attestation_object, '', id: 'attestation_object'
