--- a/app/views/idv/usps/index.html.slim
+++ b/app/views/idv/usps/index.html.slim
@@ -13,7 +13,8 @@
 = button_to @decorated_usps.button, idv_usps_path, method: 'put',
   class: 'btn btn-primary btn-wide', form_class: 'inline-block mr2'
 
-= link_to t('idv.messages.usps.bad_address'), idv_phone_path
+= button_to t('idv.messages.clear_and_start_over'), idv_session_path, method: :delete,
+  class: 'btn btn-link'
 
 .mt2.pt1.border-top
   = link_to t('links.cancel'), idv_cancel_path, class: 'h5'
