Fix webauthn success icon

--- a/app/views/users/webauthn_setup/success.html.slim
+++ b/app/views/users/webauthn_setup/success.html.slim
@@ -1,7 +1,7 @@
-- title t('doc_auth.titles.doc_auth')
+- title t('forms.webauthn_setup.success_title')
 
-= image_tag(asset_url('alert/success'),
-        alt: t('idv.titles.session.success'), width: 60)
+= image_tag(asset_url('alert/success.svg'),
+        alt: t('forms.webauthn_setup.success_title'), width: 60)
 
 h1.h3.mb2.mt3.my0 = t('forms.webauthn_setup.success_title')
 
