LG-745 Store analytics on whether users have platform authenticators
**Why**: So that we can anticipate and plan for registering and using these devices in future.

**How**: Use a simple API call to isUserVerifyingPlatformAuthenticatorAvailable which is part of the WebAuthn spec.  When a user sets up their security key or signs in, add a call to this method. If the promise returns, set the platform_authenticator field in the form to be submitted to true or false.  If the call times out the value will default to blank.

--- a/app/views/layouts/base.html.slim
+++ b/app/views/layouts/base.html.slim
@@ -67,6 +67,7 @@ html lang="#{I18n.locale}" class='no-js'
 
     #session-timeout-cntnr
     - if current_user
+      = render 'shared/platform_authenticator'
       = auto_session_timeout_js
     - else
       = auto_session_expired_js
