LG-759 Add personal key phishing warning
**Why**: So that users know that we will not ask them to enter their
personal key in an email.

--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -1,5 +1,6 @@
 .bg-gray-lighter { background-color: $gray-lighter; }
 .bg-light-blue { background-color: $blue-light; }
+.bg-lighter-blue { background-color: $blue-lighter; }
 .bg-lightest-blue { background-color: $blue-lightest; }
 .bg-lightest-red { background-color: $red-lightest; }
 
