--- a/app/views/users/recovery_code_setup/index.html.slim
+++ b/app/views/users/recovery_code_setup/index.html.slim
@@ -1,10 +1,10 @@
 .relative
   form(id='verify-key' method='post' action="#{create_verify_personal_key_path}" name="verify-key")
     .pt4.px1.sm-px5.key-badge.border.border-dashed.border-red.rounded-xl
-      h3.mt0.mb2 = t('forms.personal_key.title')
-      p.mb3 = t('forms.personal_key.instructions')
+      h3.mt0.mb2 = t('forms.recovery_code.title')
+      p.mb3 = t('forms.recovery_code.instructions')
 
-      = render 'shared/personal_key_input', code: ''
+      = render 'shared/recovery_code_input', code: ''
       = hidden_field_tag :authenticity_token, form_authenticity_token
 
     .mt3
