LG-337 Generate login codes.
**Why** Show actual login codes in the GUI
**How** Merge generator and call it from the presenter code.

--- a/app/views/users/recovery_code_setup/index.html.slim
+++ b/app/views/users/recovery_code_setup/index.html.slim
@@ -10,7 +10,7 @@ ul.list-reset
   li.py2.border-top
     .mb2
       - @presenter.codes.each_with_index  do |code, index|
-        .inline-block.bold = code
+        p.mt-tiny.mb0 = code
   li.py2.border-top
     .mb2
       .mr1.inline-block.circle.circle-number.bg-blue.white
