LG-583 Update account reset final delete screen design
**Why**: To make the delete option less prominent since the user will not be able to recover any information linked to their account.

**How**: Use the same format as the confirmation of delete screen at the beginning of the process.

--- a/app/views/account_reset/delete_account/show.html.slim
+++ b/app/views/account_reset/delete_account/show.html.slim
@@ -6,10 +6,8 @@ p.mt-tiny.mb0
 br
 h4.my2 = t('account_reset.delete_account.are_you_sure')
 
-= button_to t('account_reset.delete_account.delete_button'), \
-    account_reset_delete_account_path, method: :delete, \
-    class: 'btn btn-red col-6 p2 rounded-lg border bw2 bg-lightest-red border-red border-box'
-br
-br
-hr
-= link_to t('account_reset.delete_account.cancel'), root_url
+= button_to t('account_reset.request.no_cancel'), root_url, method: :get,
+        class: 'btn btn-primary btn-wide mb1 personal-key-continue',
+        'data-toggle': 'modal'
+= button_to t('account_reset.request.yes_continue'), account_reset_delete_account_path, \
+    method: :delete, class: 'btn btn-link'
