LG-795 Display timestamps in the local timezone
**Why**: As a user I want to see events in my account history in my local timezone

**How**: Since we do not store a user's timezone, update timestamps to the user's local timezone by adding client side javascript which uses the timezone of the browser.  Use the local_time gem.  Set the locale in the javascript by grabbing it from the path in the url.  Add bug fixes and internationalization.

--- a/app/views/accounts/_identity_item.html.slim
+++ b/app/views/accounts/_identity_item.html.slim
@@ -7,5 +7,5 @@
           service_provider_link: link_to(event.display_name, event.return_to_sp_url))
         - else
           = t('event_types.authenticated_at', service_provider: event.display_name)
-    .sm-col.sm-col-6.px1.sm-right-align
-      = event.happened_at_in_words
+    .sm-col.sm-col-6.px1.sm-right-align`
+      = local_time(event.happened_at, t('time.formats.event_timestamp'))
