--- a/app/views/two_factor_authentication/backup_code_verification/show.html.slim
+++ b/app/views/two_factor_authentication/backup_code_verification/show.html.slim
@@ -1,11 +1,11 @@
 - title t('titles.enter_2fa_code')
 
 h1.h3.my0 = t('two_factor_authentication.personal_key_header_text')
-p.mt-tiny.mb0 = t('two_factor_authentication.recovery_code_prompt')
+p.mt-tiny.mb0 = t('two_factor_authentication.backup_code_prompt')
 
-= simple_form_for(@recovery_code_form, url: login_two_factor_recovery_code_path,
+= simple_form_for(@backup_code_form, url: login_two_factor_backup_code_path,
   html: { autocomplete: 'off', method: :post, role: 'form' }) do |f|
-  = render 'partials/recovery_code/entry_fields', f: f, attribute_name: :recovery_code
+  = render 'partials/backup_code/entry_fields', f: f, attribute_name: :backup_code
   = f.button :submit, t('forms.buttons.submit.default'), class: 'btn btn-primary'
 
 = render 'shared/fallback_links', presenter: @presenter
